--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
             <!--  fuction screen  -->
             <div class="w-full py-5 px-6 text-2xl text-white font-thin">{{currentOperator}}</div>
             <!--  number screen  -->
-            <div class="w-full py-5 px-6 text-6xl text-white font-thin">{{result | number}}</div>
+            <div class="w-full py-5 px-6 text-6xl text-white font-thin">{{result}}</div>
 
         </div>
         <!-- end calculator screen  -->
